# django-to-docker

./: .gitignore  Dockerfile  Readme.md  docker-compose.yml  manage.py  pyproject.toml
check_save_many/: apis.py  apps.py  models.py  serializers.py  urls.py
check_save_many/migrations/: 0001_initial.py  0002_auto_20201004_1349.py
django_to_docker/: asgi.py  settings.py  urls.py  wsgi.py
drf_save_many_children/: asgi.py  settings.py  urls.py  wsgi.py
